# mantis-vision

./: main.py  pyproject.toml  requirements.txt  requirements_old.txt  send_yag.py
mantis_vision/: base_functions.py  frontend.py  look_and_feel.py  send_email.py  showcase_loading.py  simple_workflow.py  statefulness.py
mantis_vision/preset_models/sleipner/: utsira_model.csv  utsira_rocks.csv
mantis_vision/preset_models/two_layer/: endurance.csv
style/: style.css
