[tool.poetry]
name = "mantis-vision"
version = "0.1.0"
description = "Mantis Vision streamlit frontend"
authors = ["giorgos papageorgiou <gpap.gpap@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mantis_vision" }]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12,!=3.9.7"
streamlit = "^1.25.0"
altair = "<5"
htbuilder = "^0.6.1"
matplotlib = "^3.7.0"
yagmail = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = { version = "^23.7.0", allow-prereleases = true }
# mantis = { git = "ssh://git@github.com/gpap-gpap/anisotroPY", branch = "dev-fAVO" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
